--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /.gradle/
 /gradle/
+/Problems/Cinema/out/
+/Tic-Tac-Toe with AI/task/out/
+/Problems/Pretty looking pattern/out/
+/.idea/frameworkLessonHistory/
