--- a/Problems/Cinema/task-info.yaml
+++ b/Problems/Cinema/task-info.yaml
@@ -10,13 +10,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/1930#comment
-status: Failed
+status: Solved
 feedback:
-  message: "Failed test #1 of 15. Runtime error\n\nThis is a sample test from the\
-    \ problem statement!\n\nTest input:\n3 4\n0 1 0 1\n1 1 0 1\n1 0 0 1\n2\nCorrect\
-    \ output:\n3\n\nYour code output:\n\n\nError:\nException in thread \"main\" java.util.NoSuchElementException\n\
-    \tat java.base/java.util.Scanner.throwFor(Scanner.java:937)\n\tat java.base/java.util.Scanner.next(Scanner.java:1594)\n\
-    \tat java.base/java.util.Scanner.nextInt(Scanner.java:2258)\n\tat java.base/java.util.Scanner.nextInt(Scanner.java:2212)\n\
-    \tat Main.fillHall(Main.java:29)\n\tat Main.main(Main.java:10)\n"
-  time: Tue, 15 Dec 2020 19:15:15 UTC
+  message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/1930#comment">JetBrains
+    Academy</a></html>
+  time: Sun, 20 Dec 2020 10:57:58 UTC
 record: -1
