--- a/Tic-Tac-Toe with AI/Easy does it/task-info.yaml
+++ b/Tic-Tac-Toe with AI/Easy does it/task-info.yaml
@@ -347,5 +347,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/81/stages/448/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/81/stages/448/implement">JetBrains
+    Academy</a>
+  time: Mon, 21 Dec 2020 18:13:46 UTC
 record: -1
