--- a/Tic-Tac-Toe with AI/Watch 'em fight/task-info.yaml
+++ b/Tic-Tac-Toe with AI/Watch 'em fight/task-info.yaml
@@ -409,6 +409,21 @@ files:
         }
     }
   learner_created: false
+- name: src/tictactoe/GameChecks.java
+  visible: true
+  learner_created: true
+- name: src/tictactoe/GameMode.java
+  visible: true
+  learner_created: true
+- name: src/tictactoe/GameProgress.java
+  visible: true
+  learner_created: true
+- name: src/tictactoe/Ai.java
+  visible: true
+  learner_created: true
+- name: src/tictactoe/Table.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/81/stages/449/implement#comment
 status: Solved
 feedback:
