--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 /Tic-Tac-Toe with AI/task/out/
 /Problems/Pretty looking pattern/out/
 /.idea/frameworkLessonHistory/
+/**/*.iml
+/**/*.html
+/**/*.txt
+/**/*.yaml
+/**/*.css
+/**/*.bat
+/**/*.jar
+/**/*.properties
+/**/*.xml
