--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -5,3 +5,11 @@ content:
 - Cinema
 - Overloading methods
 - Print
+- Project constants and methods
+- Too many cats
+- Phone
+- Time
+- Movie
+- Fix the non-compiled hierarchy
+- Employees
+- Saying animals
