--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -15,3 +15,14 @@ content:
 - Saying animals
 - Shapes area
 - Publications
+- K-combination
+- Alternating Fibonacci numbers
+- Number of decompositions
+- Find mistake
+- Publication and its subclasses
+- IntBinaryOperation
+- Users and WebSites
+- Shape hierarchy
+- Mutable geometric shapes
+- Account Service
+- Compact strings with AsciiCharSequence
