--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/262721/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Tue, 05 Jan 2021 10:41:06 UTC
+update_date: Sun, 10 Jan 2021 13:46:11 UTC
 stages:
 - id: 447
   step: 7434
@@ -16,10 +16,10 @@ stages:
   is_completed: true
 - id: 450
   step: 7437
-  is_completed: false
+  is_completed: true
 - id: 451
   step: 7438
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Units of information
